--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   Delivery:
     env:
-      NAME: 'taraedle-server'
+      NAME: 'taraedle_server'
     runs-on: ubuntu-latest
 
     outputs:
@@ -34,6 +34,7 @@ jobs:
         id: meta
         run: |
           echo "tags=${{ secrets.DOCKER_USER }}/$NAME:develop" >> "$GITHUB_OUTPUT"
+          echo "Generated tag: ${{ secrets.DOCKER_USER }}/$NAME:develop"
 
       - name: create ENV
         env:
@@ -45,7 +46,7 @@ jobs:
       - name: Build and push to Docker Hub
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           context: .
           push: true
           no-cache: true
@@ -56,7 +57,7 @@ jobs:
       PORT: 22
       IP: ${{ secrets.SSH_IP }}
       USER: ${{ secrets.SSH_ID }}
-      NAME: 'taraedle-server'
+      NAME: 'taraedle_server'
     runs-on: ubuntu-latest
     needs: Delivery
 
