--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs-timezone-iana-plugin": "^0.1.0",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.13.0",
+    "hangul-js": "^0.2.6",
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "passport-google-oauth20": "^2.0.0",
